--- a/portfolio/src/components/Header/About/About.css
+++ b/portfolio/src/components/Header/About/About.css
@@ -1,24 +1,24 @@
-.about{
+.about {
     height: calc(100vh - 80px);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#about__row{
+#about__row {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.about__left{
+.about__left {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
 }
 
-.about__left h1{
+.about__left h1 {
     font-size: 60px;
     font-weight: 700;
     line-height: 1.2;
@@ -26,11 +26,11 @@
     color: white;
 }
 
-.about__left h1 span{
+.about__left h1 span {
     color: #55e6a5;
 }
 
-.about__left p{
+.about__left p {
     font-weight: 500;
     margin-bottom: 65px;
     line-height: 1.7;
@@ -38,13 +38,13 @@
     color: #a2a2a2;
 }
 
-.about__left .about__left__buttons{
+.about__left .about__left__buttons {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
 
-.about__left #download{
+.about__left #download {
     color: #02050a;
     font-weight: 500;
     font-size: 16px;
@@ -55,16 +55,16 @@
     transition: all 0.3s linear 0s;
 }
 
-.about__left #download:hover{
+.about__left #download:hover {
     background-color: #141c27;
     color: white;
 }
 
-.about__left #download i{
+.about__left #download i {
     margin-left: 3px;
 }
 
-.about__left #watch{
+.about__left #watch {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
@@ -75,12 +75,12 @@
     gap: 10px;
 }
 
-.about__left #watch i{
+.about__left #watch i {
     color: #55e6a5;
     font-size: 50px;
 }
 
-.about__right{
+.about__right {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -89,11 +89,11 @@
     z-index: 1;
 }
 
-.about__right img{
+.about__right img {
     height: 515px;
 }
 
-.about__right::after{
+.about__right::after {
     position: absolute;
     content: "";
     background: url('https://zyan.vercel.app/images/shapes/banner_shape.png');
@@ -108,70 +108,76 @@
 
 
 
-/* Media */
+/* About Media */
 
 
 
-@media screen and (max-width: 1400px){
-    .about__left h1{
+@media screen and (max-width: 1400px) {
+    .about__left h1 {
         font-size: 50px;
     }
 
-    .about__right img{
+    .about__right img {
         height: 430px;
     }
 
-    .about__right::after{
+    .about__right::after {
         width: 451px;
         height: 500px;
     }
 }
 
-@media screen and (max-width: 1200px){
-    .about__left h1{
+@media screen and (max-width: 1200px) {
+    #about__first__col-6 {
+        width: 65%;
+    }
+
+    #about__second__col-6 {
+        display: none;
+    }
+
+    #about__row {
+        justify-content: flex-start;
+    }
+
+    .about__left h1 {
         font-size: 55px;
     }
+}
 
-    .about__right img{
-        display: none;
+@media screen and (max-width: 992px) {
+    .about {
+        height: calc(60vh - 60px);
     }
 
-    .about__right::after{
-        display: none;
+    #about__first__col-6 {
+        width: 100%;
     }
 }
 
-@media screen and (max-width: 992px){
-    #about__first__col-6{
-        width: 720px;
+@media screen and (max-width: 768px) {
+    .about__left h1 {
+        font-size: 48px;
     }
 
-    #about__second__col-6{
-        display: none;
-    }
-}
-
-@media screen and (max-width: 768px){
-    #about__first__col-6{
-        width: 540px;
+    #about__first__col-6 {
+        width: 100%;
     }
 }
 
-@media screen and (max-width: 576px){
-    #about__first__col-6{
-        width: 95%;
+@media screen and (max-width: 489px) {
+    .about {
+        height: calc(85vh - 60px);
     }
-}
 
-@media screen and (max-width: 489px){
-    .about__left .about__left__buttons{
+    .about__left .about__left__buttons {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
     }
 
-    .about__left #watch{
+    .about__left #watch {
         margin-top: 20px;
     }
 }
