--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -4,13 +4,14 @@
 }
 
 .footer__top .contact .contact__svg1{
-    width: 137.7px;
+    width: 100px;
     height: 100px;
     background-color: #55e6a5;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .footer__top .contact .contact__svg2{
@@ -42,7 +43,7 @@
 .footer__top .contact{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 35px;
 }
 
@@ -114,7 +115,7 @@
 
 @media screen and (max-width: 1400px){
     .contact__svg1{
-        width: 107px !important;
+        width: 70px !important;
         height: 70px !important;
     }
 
@@ -134,16 +135,47 @@
 }
 
 @media screen and (max-width: 1200px){
+
+    .footer{
+        padding-top: 80px;
+    }
+
+    .contact__row{
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+    
+    .contact__col-4{
+        width: 100%;
+    }
+
+    .contact{
+        justify-content: flex-start !important;
+        margin-bottom: 40px;
+    }
+
+    .contact__text h3{
+        margin-bottom: 10px !important;
+    }
+
     .contact__svg1{
-        display: none !important;
+        width: 75px !important;
+        height: 75px !important;
     }
 
     .contact__svg2{
-        display: none !important;
+        width: 75px !important;
+        height: 75px !important;
     }
 
     .contact__svg3{
-        display: none !important;
+        width: 75px !important;
+        height: 75px !important;
+    }
+
+    .footer__bottom{
+        margin-top: 15px;
     }
 }
 
@@ -156,20 +188,6 @@
         margin-top: 50px;
     }
 
-    .contact__row{
-        display: flex;
-        flex-direction: column;
-        gap: 25px;
-    }
-
-    .contact__col-4{
-        width: 100%;
-    }
-    
-    .contact{
-        justify-content: flex-start !important;
-    }
-
     .bottom__col-6{
         width: 100%;
     }
@@ -178,12 +196,22 @@
         justify-content: flex-start;
         margin-top: 30px;
     }
+
+    .footer__bottom{
+        margin-top: 10px;
+    }
 }
 
 @media screen and (max-width: 576px){
     .contact{
-        justify-content: center !important;
+        flex-direction: column;
+        align-items: center !important;
+        gap: 20px !important;
         text-align: center;
+    }
+
+    .contact__row{
+        gap: 10px;
     }
 
     #footer__bottom__row ul{
